fixed tap highlighting on mobile

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -6,7 +6,9 @@ nav-height = 45px
 site-orange = #ff7700
 
 body
-  
+  a
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+    
   p, li
     font-family: 'Lato', 'helvetica', sans-serif
     font-weight: 400
