--- a/src/styles/pages/home.styl
+++ b/src/styles/pages/home.styl
@@ -43,7 +43,7 @@
         display: block
         position: absolute
         top: 100px
-        left: 0
+        left: 20px
         width: 64px
         opacity: 1
         height: 64px
@@ -62,7 +62,7 @@
         position: absolute
         opacity: 1
         top: 100px
-        right: 0
+        right: 20px
         width: 64px
         height: 64px
         background-image: url('../images/arrows.png')
